--- a/layout/index.html
+++ b/layout/index.html
@@ -45,8 +45,8 @@
 
         <form action="#" class="form js-form">
             <section>
-                <h2>Cores</h2>
-                <ul>
+                <h2 class="filter-titles no-margen">CORES</h2>
+                <ul class="normal-list">
                     <li>
                         <label><input type="checkbox" name="color" value="white" /> white</label>
                     </li>
@@ -60,8 +60,8 @@
             </section>
 
             <section>
-                <h2>Tamanhos</h2>
-                <ul>
+                <h2 class="filter-titles">TAMANHOS</h2>
+                <ul class="normal-list">
                     <li>
                         <label><input type="checkbox" name="size" value="S" /> S</label>
                     </li>
@@ -75,21 +75,27 @@
             </section>
 
             <section>
-                <h2>Release date</h2>
-                <ul>
+                <h2 class="filter-titles">FAIXA DE PREÇO</h2>
+                <ul class="normal-list">
                     <li>
-                        <label><input type="checkbox" name="release_date" value="2015" />2015</label>
+                        <label><input type="checkbox" name="price" value="28.00" /> de R$0 até R$50</label>
                     </li>
                     <li>
-                        <label><input type="checkbox" name="release_date" value="2016" />2016</label>
+                        <label><input type="checkbox" name="price" value="99.90" /> de R$51 até R$150</label>
                     </li>
                     <li>
-                        <label><input type="checkbox" name="release_date" value="2017" />2017</label>
+                        <label><input type="checkbox" name="price" value="298.00" /> de R$151 até R$300</label>
+                    </li>
+                    <li>
+                        <label><input type="checkbox" name="price" value="398.00" /> de R$301 até R$500</label>
+                    </li>
+                    <li>
+                        <label><input type="checkbox" name="price" value="120.00" /> a partir de R$ 01</label>
                     </li>
                 </ul>
             </section>
-            <button type="submit" class="submit">Filter</button>
-            <button type="reset" class="reset">Clear</button>
+            <button type="submit" class="submit btn btn-primary">Filter</button>
+            <button type="reset" class="reset btn btn-primary">Clear</button>
         </form>
 
         <div class="root">
